test/Fail/Issue7955.err
Issue7955.agda:4.5-8: error: [SyntaxError]
Syntax error: unexpected '..'
when scope checking ..x
